--- a/app/src/main/res/layout/second_screen.xml
+++ b/app/src/main/res/layout/second_screen.xml
@@ -27,6 +27,7 @@
         app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
         android:text="@string/sample_name"
         android:textStyle="bold"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:layout_marginHorizontal="20dp"
@@ -39,6 +40,7 @@
         android:text="@string/selected_user_name"
         android:textSize="24dp"
         android:textStyle="bold"
+        android:fontFamily="@font/poppins_semibold"
         android:gravity="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/chooseUserButton"
