fix: Fix layout for getting data from API, add ToolBar synchronized with navigation and include dependencies that needed in app module

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/firstScreenFragment"
         android:name="com.jalupriyangga.palindromeapp.ui.FirstScreenFragment"
-        android:label="FirstScreenFragment"
+        android:label=""
         tools:layout="@layout/first_screen">
         <action
             android:id="@+id/action_firstScreenFragment_to_secondScreenFragment2"
