feat: Create palindrome checker feature in FirstScreenFragment using AlertDialog interface, add some details UI in AlertDialog.

--- a/app/src/main/res/layout/first_screen.xml
+++ b/app/src/main/res/layout/first_screen.xml
@@ -24,7 +24,8 @@
         android:background="@drawable/white_background"
         android:hint="@string/name"
         android:textSize="16dp"
-        android:textColor="@color/grey"
+        android:textColorHint="@color/grey"
+        android:textColor="@color/black"
         android:inputType="text"
         android:paddingStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,8 +39,9 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/white_background"
         android:hint="@string/palindrome"
+        android:textColorHint="@color/grey"
         android:textSize="16dp"
-        android:textColor="@color/grey"
+        android:textColor="@color/black"
         android:inputType="text"
         android:paddingStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +57,7 @@
         android:background="@drawable/white_background"
         android:text="@string/check"
         android:textSize="14dp"
-        app:backgroundTint="#2B637B"
+        app:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/palindromeInput" />
@@ -68,7 +70,7 @@
         android:background="@drawable/white_background"
         android:text="@string/next"
         android:textSize="14dp"
-        app:backgroundTint="#2B637B"
+        app:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/checkButton" />
