--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#04021D</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#5C686777</color>
+    <color name="blue">#2B637B</color>
 </resources>
