--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:fontFamily">@font/poppins_medium</item>
+        <item name="colorPrimary">@color/blue</item>
     </style>
 
     <style name="Theme.PalindromeApp" parent="Base.Theme.PalindromeApp" />
