--- a/app/src/main/res/layout/item_user_view.xml
+++ b/app/src/main/res/layout/item_user_view.xml
@@ -1,24 +1,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/itemUser"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/itemUser"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
+    android:background="?selectableItemBackground"
+    android:paddingHorizontal="40dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:paddingHorizontal="50dp"
-    android:background="?selectableItemBackgroundBorderless"
-    >
+    app:layout_constraintTop_toTopOf="parent">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/userImageView"
-        android:layout_width="49dp"
-        android:layout_height="49dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/image_profile_of_user"
         android:src="@drawable/user_photo_sample" />
@@ -26,11 +25,10 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_toEndOf="@+id/userImageView"
         android:layout_alignTop="@id/userImageView"
         android:layout_alignBottom="@id/userImageView"
-        >
+        android:layout_toEndOf="@+id/userImageView"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/userNameTextView"
@@ -44,10 +42,17 @@
         <TextView
             android:id="@+id/emailTextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/email_sample"
             android:textColor="@color/grey"
+            android:gravity="top"
             android:textSize="14sp" />
     </LinearLayout>
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:layout_below="@id/userImageView"
+        android:background="@color/grey" />
 </RelativeLayout>
